--- a/public/css/style.css
+++ b/public/css/style.css
@@ -651,7 +651,7 @@ header .logo span{
 
 #msform input,
 #msform textarea {
-  padding: 15px;
+  /* padding: 15px; */
   border: 1px solid #ccc;
   border-radius: 3px;
   margin-bottom: 10px;
